--- a/src/routes/Home/style.css
+++ b/src/routes/Home/style.css
@@ -10,3 +10,7 @@
   margin: 1rem 0;
   font-weight: bold;
 }
+
+.searchEngine h3 {
+  font-size: 1.2rem;
+}
